--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,16 +3,22 @@ default_stages: [commit]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.3.0
     hooks:
       - id: trailing-whitespace
-      - id: end-of-file-fixer
+      - id: check-json
       - id: check-yaml
-
-  - repo: https://github.com/psf/black
-    rev: 22.3.0
-    hooks:
-      - id: black
+      - id: check-case-conflict
+      - id: check-docstring-first
+      - id: check-merge-conflict
+      - id: debug-statements
+      - id: detect-private-key
+      - id: end-of-file-fixer
+      - id: double-quote-string-fixer
+      - id: pretty-format-json
+      - id: name-tests-test
+        exclude: "conftest.py|factories.py"
+        args: ["--django"]
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
@@ -26,8 +32,7 @@ repos:
         args: ["--config=setup.cfg"]
         additional_dependencies: [flake8-isort]
 
-# sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
 ci:
-  autoupdate_schedule: weekly
+  autoupdate_schedule: daily
   skip: []
   submodules: false
