--- a/local.yml
+++ b/local.yml
@@ -5,7 +5,7 @@ volumes:
   local_postgres_data_backups: {}
 
 services:
-  django:
+  django: &django
     build:
       context: .
       dockerfile: compose/local/django/Dockerfile
@@ -30,3 +30,35 @@ services:
       - local_postgres_data_backups:/backups:z
     env_file:
       - .envs/.local
+
+  redis:
+    image: redis:6
+    container_name: tmrw_local_redis
+
+  celeryworker:
+    <<: *django
+    image: tmrw_local_celeryworker
+    container_name: tmrw_local_celeryworker
+    depends_on:
+      - redis
+      - postgres
+    ports: []
+    command: /start-celeryworker
+
+  celerybeat:
+    <<: *django
+    image: tmrw_local_celerybeat
+    container_name: tmrw_local_celerybeat
+    depends_on:
+      - redis
+      - postgres
+    ports: []
+    command: /start-celerybeat
+
+  flower:
+    <<: *django
+    image: tmrw_local_flower
+    container_name: tmrw_local_flower
+    ports:
+      - "5555:5555"
+    command: /start-flower
